[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kumc"
authors = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
maintainers = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "description"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    
]
dependencies = [
    "anyio>=4.2.0",
    "certifi>=2023.11.17",
    "fake-useragent>=1.4.0",
    "h11>=0.14.0",
    "httpcore>=1.0.2",
    "httpx>=0.26.0",
    "idna>=3.6",
    "sniffio>=1.3.0",
    "soupsieve>=2.5",
    "wheel>=0.42.0"
]
[project.urls]
Source = "https://github.com/zeroday0619/anamSDK.git"